Color also absolute path images

Also images that are loaded with an absolute path should
get colored by the current KSvg ImageSet, this comes from an
old recoloring limitation that existed before the stylesheet based one

BUG:485801